# haifa-python

./: .gitignore  AGENTS.md  README.md  pylua.spec  pyproject.toml  pytest.ini  requirements.txt  test_chinese_gui.py
benchmark/: README.md  analyze_results.py  benchmark_runner.py
compiler/: README.md  __init__.py  ast_nodes.py  ast_visualizer.py  bytecode.py  bytecode_io.py  bytecode_vm.py  compiler.py  executor.py  jq_ast.py  jq_bytecode.py  jq_cli.py  jq_compiler.py  jq_parser.py  jq_runtime.py  jq_vm.py  parser.py  sample.json  test_ast_visualizer.py  test_end_to_end.py  test_jq_cli.py  test_jq_compiler.py  test_jq_core_filters.py  test_jq_expressions.py  test_jq_index_slice.py  test_jq_parser.py  test_jq_runtime.py  test_jq_sort_agg.py  test_jq_string_tools.py  test_jq_variables_cli.py  test_json_values.py  test_value_utils.py  test_vm_features.py  value_utils.py  vm_errors.py  vm_events.py  vm_visualizer.py  vm_visualizer_headless.py
docs/: guide.md  jq_design.md  lua_guide.md  lua_interpreter_implement.md  lua_sprint.md  performance_benchmark.md  performance_test_system.md  reference.md  sprint.md  vm_instruction_set.md
examples/: chinese_test.lua  coroutine_basic.lua  coroutine_data_exchange.lua  coroutine_producer_consumer.lua  coroutine_wrap_status.lua  coroutines.lua  counter.lua  hello.lua
haifa_jq/: __init__.py  jq_ast.py  jq_bytecode.py  jq_cli.py  jq_compiler.py  jq_parser.py  jq_runtime.py  jq_vm.py
haifa_lua/: __init__.py  analysis.py  ast.py  cli.py  compiler.py  coroutines.py  environment.py  event_format.py  lexer.py  module_system.py  parser.py  repl.py  runtime.py  stdlib.py  table.py
knowledge/: 01-compiler-vs-interpreter.md  02-compiler-phases.md  03-bytecode-and-vm.md  04-stack-vm-vs-register-vm.md  05-scopes-and-closures.md  06-lua-execution-pipeline.md  07-debugger-architecture.md  08-coroutines-history-and-implementation.md  09-coroutine-visualizer-and-error-plan.md
pygame/: __init__.py
vm/: stack_vm.py  (+8 more)
(+40 files in other folders)
